--- a/index.html
+++ b/index.html
@@ -10,40 +10,76 @@
   <div class="banner-container">
    <h1 class="banner"><b>✧˖°       | Arcilla Gallery |        ✧˖°</b></h1>
   </div>
-  <div>
-   <h3 class="banner2">My name is Joseph Arcilla, these photos 📷 and creations are the beacons to reify my goals.</h3>
+  <div class="description">
+  <h2 style="text-align:center">These are my Beacon</h2>
   </div>
-  <div class="gallery-container">
-   <div class="gallery-item">
-    <img src="Arc1.jpg" alt="Image 1">
-   </div>
-   <div class="gallery-item">
-    <img src="Arc2.jpg" alt="Image 2">
-   </div>
-   <div class="gallery-item">
-    <img src="Arc3.jpg" alt="Image 3">
-   </div>
-   <div class="gallery-item">
-    <img src="Arc4.jpg" alt="Image 4">
-   </div>
-   <div class="gallery-item">
-    <img src="Arc5.jpg" alt="Image 5">
-   </div>
-   <div class="gallery-item">
-    <img src="https://photos.google.com/album/AF1QipP8VKVvH1ZPIzFXiiUW3uDx0SFQ-MAjXGTpC8-2/photo/AF1QipPOw35SP7NN5yTIT7sJSKH6TfvKQU-lGuhEXrdS" alt="Image 6">
-   </div>
-   <div class="gallery-item">
-    <img src="image7.jpg" alt="Image 7">
-   </div>
-   <div class="gallery-item">
-    <img src="image8.jpg" alt="Image 8">
-   </div>
-   <div class="gallery-item">
-    <img src="image9.jpg" alt="Image 9">
-   </div>
-   <div class="gallery-item">
-    <img src="image10.jpg" alt="Image 10">
-   </div>
+  <div class="row">
+    <div class="column">
+      <img src="Arc1.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+      <img src="Arc2.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+      <img src="Arc3.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+      <img src="Arc4.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+      <img src="Arc5.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    </div>
   </div>
+
+  <div id="myModal" class="modal">
+    <span class="close cursor" onclick="closeModal()">&times;</span>
+    <div class="modal-content">
+      <div class="mySlides">
+        <div class="numbertext">1 / 5</div>
+        <img src="Arc1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">2 / 5</div>
+        <img src="Arc2.jpg" style="width:100%">
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">3 / 5</div>
+        <img src="Arc3.jpg" style="width:100%">
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">4 / 5</div>
+        <img src="Arc4.jpg" style="width:100%">
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">5 / 5</div>
+        <img src="Arc5.jpg" style="width:100%">
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+      <div class="caption-container">
+        <p id="caption"></p>
+      </div>
+
+      <div class="column">
+        <img class="demo cursor" src="Arc1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Image 1">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="Arc2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Image 2">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="Arc3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Image 3">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="Arc4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Image 4">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="Arc5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Image 5">
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
